# numan

./: README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml
examples/interpolation/: linear_splines.py  polynomial_interpolation_test.py  runge_function_poly_interp.py
numan/: errorstheory.py  linearsystems.py
src/numan/: data.py  eigenvalues.py  errorstheory.py  integration.py  interpolation.py  linearsystems.py  matrices.py  nonlineareq.py  polynomials.py
tests/: test_eigenvalues.py  test_errorstheory.py  test_interpolation.py  test_linearsystems.py  test_matrices.py  test_polynomials.py
