[metadata]
name = numan
description = a numerical analysis library
author = Lemuel Puglisi
license = MIT
platform = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    numan
install_requires =
    numpy
python_requires = >= 3.6
package_dir = 
    =src
zip_safe = no

[option.extras_require]
testing=
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[flake8]
max-line-length = 160